# state_estimation

./: .gitignore  404.html  CMakeLists.txt  CNAME  LICENSE  README.md  index.html  mkdocs.yml  sitemap.xml
app/bundle_adjustment/: README.md
app/bundle_adjustment/ba_demo_ceres/: CMakeLists.txt  baproblem.hpp
app/bundle_adjustment/common/: CMakeLists.txt  bal_problem.cpp
app/pose_graph/: pose_graph_g2o_lie_algebra.cpp
bundle_adjustment/: CMakeLists.txt  bal_draw_hessian.cpp  bal_g2o.cpp  ceres_bundle.cpp  g2o_bal_class.h  g2o_bundle.cpp
bundle_adjustment/ba_ceres/: CMakeLists.txt  SnavelyReprojectionError.h  ceresBundle.cpp
bundle_adjustment/ba_g2o/: CMakeLists.txt  g2o_bal_class.h  g2o_bundle.cpp
bundle_adjustment/ba_gauss_newton/: CMakeLists.txt  ba_gauss_newton.cpp  ba_gn_ceres.cpp  ba_gn_g2o.cpp
bundle_adjustment/common/: BALProblem.cpp  BALProblem.h  BundleParams.h  CMakeLists.txt  bal_problem.h  bal_projection.h  bundle_params.h  draw_hessian.h  g2o_imp.h
ceres_solver/: CMakeLists.txt  ceres_demo_02.cc  ceres_demo_03.cc  helloworld.cc
docs/: CNAME  index.md
docs/appendix/: README.md
docs/cpp/: eigen.md  math_libs.md
docs/estimation/: README.md
docs/estimation/filter/: README.md
docs/estimation/map/: README.md
docs/filter/: README.md
docs/kd/: README.md
docs/maths/typesetting/: TeX.md  conda.md
docs/maths/wolfram/: wolfram_mathematica.md
docs/matlab/: README.md
docs/python/: README.md  anaconda.md  pip_whl.md  py_libs.md
docs/r/: README.md
docs/typesetting/: README.md  jupyter.md
docs/wolfram/: README.md
estimation/: .gitignore  CMakeLists.txt  index.html
estimation/app/bundle_adjustment/: bal_ceres.cpp
estimation/app/pose_graph/: pose_graph_g2o_SE3.cpp
estimation/convisibility/: nullspace_cmap.py
estimation/docs/solvers/: README.md
estimation/filter/: index.html
estimation/kalman_filter/matlab/simulink/: DistKalmanFilter.m  TrackKalmanFilter.m  TrackStateFunction.m  track_kf_sim.slx
estimation/kalman_filter/python/: IEKF.ipynb  KF.py  kalman_filter_tracking_plane.py  ukf_simple_demo.ipynb
estimation/map/: index.html
estimation/optimization_basis/: CMakeLists.txt  curve_fitting_gn.cpp  rosenbrock.py
estimation/pcg/: PCG.vcxproj  matrix.cpp  matrix.h  util.h
estimation/solvers/: index.html
filter/: index.html
kalman_filter/: README.md  kf_overview.md
kalman_filter/matlab/simulink/: DeviationAnalysis.m  distance_kf_sim.slx
kalman_filter/python/: kalman_filter.py
kd/: .gitignore  index.html
kd/bspline/: CMakeLists.txt  Simulator.cpp  Simulator.h  bspline.cpp  bspline_ov.cpp
kd/bspline/BSplineBasisFunction/: BSplineBasisFunction.cpp  BSplineBasisFunction.h  CMakeLists.txt  Main.cpp
kd/bspline/BSplineQt/: B_Spline.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  palette.cpp  palette.h  palette.ui
kd/bspline/py/: BSpline.ipynb  b_spline.py
kd/eigen_transform/: CMakeLists.txt  README.md  eigen_geometry.cpp  eigen_geometry_quickref.cpp  eigen_quaternion_slerp.cpp  eigen_rotation.cpp  eigen_sophus.cpp
kd/py/: convert_Rt.py  rotation_demo.py  tf.py  tf00.py
kd/ros_tf/: CMakeLists.txt  package.xml
kd/ros_tf/include/: ros_tf_utils.h
kd/ros_tf/launch/: show_path.launch  start_demo.launch
kd/ros_tf/rviz/: show_path.rviz
kd/ros_tf/src/: frame_tf_broadcaster.cpp  ros_tf_test.cpp  show_path.cpp  turtle_tf_broadcaster.cpp  turtle_tf_listener.cpp
kd/sim3/: CMakeLists.txt  main.cc
map/: index.html
maths/: .gitignore  index.html
maths/R/: d3.R  pl.R  test.R  test01.R  train_cm.R
maths/appendix/: index.html
maths/basics/complex/: complex.c  complex.cpp
maths/cpp/eigen/: index.html
maths/cpp/math_libs/: index.html
maths/eigen/: CMakeLists.txt  build_qr.sh  eigen_matrix.cpp  eigen_matrix_mul.cpp  eigen_quickref.md  eigen_simd_test.cpp  eigen_tensor.cpp  givens_rotation.cpp  qr_test.cpp  tic_toc.h
maths/math_libs/: index.html
maths/math_libs/eigen/: index.html
maths/matlab/: index.html  t01.m  t02.m  t03.m  t04.m  t05.m
maths/python/: index.html
maths/python/DFT/: fft_random_signal.py  fft_sine_wave.py  fft_square_wave.py  fft_unit_pulse.py
maths/python/DataProcessing-NumPy/: Matrix.py
maths/python/DataVisualizer-Mayavi/: M01.py  M02.py  M03.py  M04.py
maths/python/DataVisualizer-TVTK/: tvtk.py
maths/python/DiagramPlot-Matplotlib/: P01.py  P02.py  P03.py  P04.py  P05.py  animation_demo.py  draw_plot2d.py  plot.py  plot01.py
maths/python/LinearRegression/: test.py  test.xls  test.xlsx  test01.py
maths/python/Notebook/: Tutorial00.ipynb
maths/python/NumericalCalculation-SciPy/: Least-squareFitting.py
maths/python/anaconda/: index.html
maths/python/basics/: iter.py
maths/python/pip_whl/: index.html
maths/python/py_libs/: index.html
maths/r/: index.html
maths/typesetting/: index.html
maths/typesetting/TeX/: index.html
maths/typesetting/conda/: index.html
maths/typesetting/jupyter/: index.html
maths/wolfram/: index.html
maths/wolfram/wolfram_mathematica/: index.html
matlab/: opt_gn.m  opt_gn00.m  opt_gn_lm.m  opt_lm00.m
optimization_basis/: curve_fitting_ceres.cpp  curve_fitting_g2o.cpp
optimization_basis/ceres_curve_fitting/: CMakeLists.txt  ceres_curve_fitting.cpp
optimization_basis/g2o_curve_fitting/: CMakeLists.txt  g2o_curve_fitting.cpp
optimization_basis/gauss_newton/: CMakeLists.txt  gauss_newton.cpp
particle_filter/: robotics_localization.py
pcg/: PCG.sln  demo.cpp  double.cpp  double.h  pcg.cpp  pcg.h  util.cpp
pose_graph/: CMakeLists.txt  pose_graph_g2o_SE3.cpp  pose_graph_g2o_lie_algebra.cpp  pose_graph_gtsam.cpp
search/: search_index.json
solver/ceres_solver/: ceres_demo_01.cc  ceres_demo_04.cc
solvers/: index.html
